# tetris-wasm

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py  conanfile.txt
docs/: styles.css  tetris.wasm
profiles/: default  wasm
src/: tetris.c  tetris.h
web/: index.html  tetris.js
